ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: yages
  namespace: grpc-demo
  labels:
    app: yages
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host:
    http:
      paths:
      - path: /yages
        backend:
          serviceName: yages
          servicePort: 9000
